<resources>
    <string name="app_name">Mindset Reader</string>
    <string name="book_title">80% Mindset 20% Skill</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="app_title">Mindset Reader</string>
    <string name="reading_progress">Reading Progress</string>
    <string name="reading_progress_zero">Reading Progress: 0%</string>
    <string name="reading_progress_percent">Reading Progress: %1$d%%</string>
    <string name="library_title">My Library</string>
    <string name="add_pdf">Add PDF</string>
    <string name="resume">Resume</string>
    <string name="delete">Delete</string>
    <string name="daily_reading">Daily Reading</string>
    <string name="search_books">Search books</string>
    <string name="bookmark_page">Bookmark Page</string>
    <string name="reading_progress_with_page">%1$d%% · Page %2$d of %3$d</string>
    <string-array name="library_sort_options">
        <item>Recently Read</item>
        <item>Recently Added</item>
        <item>A–Z</item>
        <item>Progress</item>
    </string-array>

</resources>